@@ -2,8 +2,8 @@
  *
  * NEBCALLBACKS.H - Include file for event broker modules
  *
- * Copyright (c) 2002-2005 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   12-16-2005
+ * Copyright (c) 2002-2006 Ethan Galstad (nagios@nagios.org)
+ * Last Modified:   05-25-2006
  *
  * License:
  *
@@ -35,7 +35,7 @@
 
 /***** CALLBACK TYPES *****/
 
-#define NEBCALLBACK_NUMITEMS                          32    /* total number of callback types we have */
+#define NEBCALLBACK_NUMITEMS                          333    /* total number of callback types we have */
 
 #define NEBCALLBACK_RESERVED0                         0     /* reserved for future use */
 #define NEBCALLBACK_RESERVED1                         1
@@ -71,6 +71,7 @@
 #define NEBCALLBACK_ACKNOWLEDGEMENT_DATA              29
 #define NEBCALLBACK_STATE_CHANGE_DATA                 30
 #define NEBCALLBACK_CONTACT_STATUS_DATA               31
+#define NEBCALLBACK_ADAPTIVE_CONTACT_DATA             32
 
 
 /***** CALLBACK FUNCTIONS *****/
